# ShanghaiTech-CS110

./: .gitignore  Makefile  README.md
Homework/: hw01.md
Homework/HW02/: convert.c
Homework/HW03/: .gitignore  flake.nix
Homework/HW03/src/: leaderboard.c  (+2 more)
Homework/HW04/: .gitignore  Makefile  calc_out.txt  ex1_e.circ  ex3_d.circ  main.tex  transition.txt
Homework/HW06/: cache.c  cache.h  simulate.c
Homework/HW07/: Makefile  homework7.tex
Homework/HW08/: Makefile  main.tex  number.pptx
Homework/HW5/: hw5-sol.typ  hw5.typ
Lab/Lab01/: Makefile  ex4.py  ex5.c
Lab/Lab02/: Makefile  Makefile.check  ex3.gdb  ex3.md  flake.nix  main.c  memleak.c  overflow.c  queue.c  queue.h  safe.c
Lab/Lab03/: Lab03.md  lab3_ex1.s  lab3_ex2.s  lab3_ex2_1.s  lab3_ex2_2.s  lab3_ex3.s
Lab/Lab04/: Lab04.md  ex1.s  ex2.s  gen_cases.py
Lab/Lab05/: ex1.circ  ex2.circ  ex3.circ  ex4.circ  ex5.circ  ex5_p2.circ  flake.nix
Lab/Lab06/: ex1.circ  ex2.circ
Lab/Lab08/: Lab08.md  Lab8.circ
Lab/Lab09/: Lab09.md
Lab/Lab11/: .gitignore
Lab/Lab12/: .gitignore  Lab12.md  part1.c  part2_3.c
Lab/Lab13/: .gitignore  matmul.c  mergesort.c  pi.c
Lab/Lab14/: Lab14.md
Project/Project1-1/: .gitignore  Makefile  assembler.c  assembler.h
Project/Project1-2/: md5.S  md5.c
Project/Project2-1/: controller_gen.py  proj_2_1_top.circ
Project/Project2-2/: proj_2_2_top.circ
Project/Project3/: .gitignore  main.c  performance_test.sh  tool.c
Project/Project3/p3lib/: Cargo.toml  build.rs
Project/Project3/p3lib/src/: lib.rs
Project/Project4/: .gitignore  README.md  burn.sh  docs.md
(+33 files in other folders)
