[package]
name = "p3lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "p3lib"
crate-type = ["staticlib"]

[dependencies]
rayon = { version = "1.8", default-features = false }  # For parallel processing
cfg-if = "1.0"  # For conditional compilation

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false
incremental = false

[features]
default = ["avx2"]
avx2 = []

